--- a/styles_login.css
+++ b/styles_login.css
@@ -56,9 +56,12 @@ section{
     display: none;
 }
 
-@media (min-width:600){
+@media (min-width:600px){
     .backlink{
-        
+        display: flex;
+        flex-direction: row;
+        font-size: small;
+        font-weight: lighter;
     }
 }
 
