--- a/styles_login.css
+++ b/styles_login.css
@@ -1,226 +1,496 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-body{
-    font-family: "Segoe UI","Roboto",Helvetica,Arial,sans-serif;
-    background-color: #ffffff;
-    padding-inline: 1rem;
-    overflow: hidden;
-}
-
-header{
+body {
     display: flex;
-    padding: 1rem 2rem;
-    margin-bottom: 2rem;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-content: center;
+    font-family: "Segoe UI", "Roboto", Helvetica, Arial, sans-serif;
+    background-color: #ffffff;
+    overflow: hidden;
+    width: 100%;
 }
 
-nav{
+header {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%; 
-    padding-top: .6rem;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-content: center;
+    padding: 1.3rem 0;
+    margin-bottom: .5rem;
+    width: 100%;
 }
 
-nav a{
+.nav {
+    display: flex;
+    flex-direction: row;
+    align-content: start;
+    justify-content: left;
+    column-gap: 6rem;
+    width: 70%;
+}
+
+.nav a {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: left;
     text-decoration: none;
     color: black;
     font-weight: 500;
-    font-size: 1.4rem;
+    font-size: clamp(1.5rem, 4vw, 1.6rem);
+
 }
 
-nav img{
+.nav img {
+    display: flex;
+    justify-content: center;
+    align-content: center;
     width: 13dvh;
-    margin-top: .2rem;
-    margin-right: 7rem;
+    height: auto;
+}
+
+a.backlink {
+    display: none;
 }
 
 /*-+-+-+--+---+-+-+-+-+-+-+--+*/
 
-section{
+.principal {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    flex-wrap: wrap;
+    align-content: center;
+    width: 100%;
+    padding-inline: 1.5rem;
 }
 
 .side_picture {
     display: none;
 }
 
-.backlink{
-    display: none;
-}
-
-@media (min-width:600px){
-    .backlink{
-        display: flex;
-        flex-direction: row;
-        font-size: small;
-        font-weight: lighter;
-    }
-}
-
-.login_title{
-    margin-bottom: 1rem;
-    font-size: 1.4rem;
-    font-weight: lighter;
-    align-self: stretch;
-    line-height: 120%;
-}
-
-.login{
+.login_form {
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.login_title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    width: 100%;
+    margin-top: 1rem;
+}
+
+
+.login {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: start;
     width: 100%;
-    margin-block: 2rem;
 }
 
-input[type="email"]{
+h3.title {
+
+    margin-bottom: 2.1rem;
+    font-size: clamp(1.6rem, 3vw, 1.76rem);
+    font-weight: 600;
+    align-self: stretch;
+}
+
+label {
+    font-size: clamp(1.05rem, 3vw, 1.08rem);
+    font-weight: lighter;
+}
+
+input[type="email"] {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    padding: .8rem;
-    border: 1px solid rgba(0, 0, 0, 0.445);
+    padding: clamp(.85rem, 2vw, .85rem);
+    border: .5px solid rgb(0, 0, 0);
     margin-top: .5rem;
-    font-size: medium;
-    color: black;
+    font-size: clamp(.98rem, 2vw, 1rem);
+
 }
 
-.login button{
+.login button {
     width: 100%;
-    padding: 1rem;
-    margin-top: 1rem;
-    font-size: .9rem;
-    background-color: #354bc4;
+    padding: clamp(.989rem, 2vw, .9899rem);
+    margin-block: .9rem;
+    font-size: clamp(.85rem, 2vw, 1rem);
+    background-color: #09078fd0;
     border: none;
     color: white;
     font-weight: 500;
-    cursor: pointer; 
+    cursor: pointer;
 }
 
-.login button:hover{
-    background-color: #2b3a9c;
+.login button:hover {
+    background-color: #09078f;
 }
 
-.login_social button img{
-    width: 1.89rem;
-    padding: .4rem;
+.login_social {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: start;
+    width: 100%;
+    margin-bottom: 1.1rem;
 }
 
-.login_social button{
+.social {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: start;
+    width: 100%;
+}
+
+.login_social p {
+    margin-top: 1rem;
+    font-size: clamp(1rem, 3vw, 1.08rem);
+    font-weight: 450;
+}
+
+.login_social button img {
+    width: 2rem;
+    padding: .5rem;
+}
+
+.login_social button {
     background-color: transparent;
-    border: 1px solid rgba(0, 0, 0, 0.11);
-    padding: .45rem .45rem;
+    border: .5px solid rgba(0, 0, 0, 0.11);
     margin-right: .5rem;
-    margin-top: .85rem;
+    margin-top: .6rem;
+    padding: .35rem .5rem;
 }
 
-.login_social button:hover{
+.login_social button:hover {
     background-color: rgba(0, 0, 0, 0.11);
 }
 
-.sesion p{
-    margin-top: 1.7rem;
-    margin-bottom: .7rem;
-    font-weight: 600;
-    font-size: 1.15rem;
+.sesion {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: start;
+    width: 100%;
+    margin-top: 1.5rem;
+    margin-bottom: 2.1rem;
 }
 
-.sesion a{
-    color: rgba(0, 0, 0, 0.658);
+.sesion p {
+
+    margin-bottom: .5rem;
+    font-weight: 500;
+    font-size: clamp(1rem, 3vw, 1.10rem);
+
+}
+
+.sesion a {
+    color: rgb(0, 0, 0);
     text-decoration: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.397);
-    
+    font-size: clamp(.98rem, 2vw, 1rem);
 }
 
-.marketing_benefits{
-    margin-top: 2rem;
-    margin-bottom: 5rem;
+.marketing_benefits {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     color: rgba(0, 0, 0, 0.774);
     width: 100%;
-    
+
 }
 
-.marketing_benefits h3{
-    font-size: .97rem;
-    font-weight: 600;
-    margin-bottom: 1.4rem;
+h3.marketing_title {
+    font-size: clamp(1rem, 3vw, 1.05rem);
+    font-weight: 500;
+    margin-bottom: 1.5rem;
     width: 100%;
 }
 
-.icon_list img{
+.icon_list img {
     display: flex;
     flex-direction: row;
     justify-content: start;
     align-items: start;
     margin-bottom: .5rem;
     margin-right: .5rem;
+    width: clamp(1.5rem, 4vw, 1.6rem);
 }
 
 
-.marketing_list ul{
+.marketing_list ul {
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: start;
     text-align: left;
     list-style: none;
-    
+    font-size: clamp(1rem, 3vw, 1.08rem);
+
 }
 
-.marketing_list li{
-    margin-bottom: .75rem;
+.marketing_list li {
+    color: black;
+    margin-bottom: .7rem;
+    font-weight: 400;
 }
 
-.login_footer ul{
+.login_footer ul {
     display: flex;
     flex-direction: row;
     justify-content: start;
     align-items: start;
-    margin-top: 4.5rem;
     list-style: none;
+    margin-top: 4.5rem;
+
 }
 
-.login_footer li a{
+.login_footer li a {
     margin-right: 1.5rem;
     text-decoration: none;
-    color: rgba(0, 0, 0, 0.733);
+    font-weight: 400;
+    color: rgb(0, 0, 0);
+    font-size: clamp(1rem, 3vw, 1.01rem);
 }
 
-.language img{
-    width: 2.2rem;
+.language img {
+    width: clamp(1.47rem, 3vw, 2rem);
     margin-right: 1rem;
 }
-.language i{
-    font-weight: bolder;
-}
+
 .language {
     display: flex;
     flex-direction: row;
-    justify-content: start;
-    align-items: center;
-    margin-top: 1.3rem;
+    justify-content: left;
+    align-content: center;
+    margin-top: 1rem;
+    font-weight: 400;
+    font-size: clamp(1rem, 3vw, 1.04rem);
+    color: black;
 }
 
-.footer{
-    margin-top: .8rem;
+.footer {
+    margin-block: 1rem;
     font-size: smaller;
-    color: rgba(0, 0, 0, 0.473);
+    color: rgba(0, 0, 0, 0.644);
     text-align: left;
+    font-size: clamp(.8rem, 2vw, .83rem);
 }
 
-.footer a{
-    color: rgba(0, 0, 0, 0.658);
-    text-decoration: underline;
+.footer a {
+    color: rgba(0, 0, 0, 0.644);
+}
+/* 
+@media (min-width:600px) {
+
+    body {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        flex-wrap: wrap;
+        align-content: center;
+    }
+
+    header {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        align-content: center;
+        padding: 1.3rem 0;
+        margin-bottom: .5rem;
+    }
+
+    .nav {
+        display: flex;
+        flex-direction: row;
+        align-content: start;
+        justify-content: left;
+        column-gap: 6rem;
+        width: 90%;
+    }
+
+    .goback {
+        display: flex;
+        flex-direction: row;
+        justify-content: left;
+        align-items: left;
+        text-decoration: none;
+        font-size: clamp(1.2rem, 3vw, 1.7rem);
+        column-gap: .5rem;
+    }
+
+    .nav img {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 20dvh;
+    }
+
+    a.backlink {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: start;
+        font-size: clamp(.5rem, 3vw, .9rem);
+        font-weight: normal;
+        margin-top: .2rem;
+    }
+
+    main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        flex-wrap: wrap;
+        align-content: center;
+        max-width: 700px;
+
+    }
+
+    .principal {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        padding: 0;
+    }
+
+    .login_form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+
+    .login_title {
+
+        width: 100%;
+        margin-top: 2rem;
+    }
+
+    .login {
+        width: 100%;
+
+    }
+
+    .login_footer ul {
+        margin-top: 3rem;
+    }
+
+    .sesion {
+        margin-top: 1rem;
+    }
+
+
 }
 
+@media (min-width:800px) {
+
+    .nav {
+        display: flex;
+        flex-direction: row;
+        align-content: start;
+        justify-content: left;
+        column-gap: 6rem;
+        width: 100%;
+    }
+
+}
+
+@media (min-width:900px) {
+
+    header {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        align-content: center;
+        padding: 1.3rem 0;
+        margin-bottom: .5rem;
+
+    }
+
+    .nav {
+        display: flex;
+        flex-direction: row;
+        align-content: center;
+        justify-content: space-around;
+        column-gap: 10rem;
+        width: 100%;
+    }
+
+    main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+        max-width: 500px;
+    }
+
+    .principal {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+        width: 100%;
+        padding: 0;
+    }
+
+    .login_form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+        width: 100%;
+    }
 
 
+
+
+}
+
+@media (min-width:1200px) {
+
+    main {
+        display: grid;
+        columns: 2;
+        width: 100%;
+
+    }
+
+    .side_picture {
+        display: grid;
+        grid-column: 1;
+        width: 1290px;
+    }
+    .login_form{
+        display: grid;
+        grid-column: 2;
+    }
+
+    
+
+
+
+} */
